kubernetes/apps/hermes-agent/hermes-agent/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: hermes-agent
spec:
  ports:
    - protocol: TCP
      port: 9119
      targetPort: 9119
